Updated README.md
Added some information how to setup the setup for this or how we can use it.